--- a/.github/workflows/build_gh_pages.yml
+++ b/.github/workflows/build_gh_pages.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install rustc
-        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -y
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
       # Runs a single command using the runners shell
       - name: Install mdbook
